feat: 売上データのレポート機能を追加し、2月のサンプルデータをシードに追加
- `package.json`に`recharts`を追加
- `prisma/seed.ts`に2026年2月の売上データと目標を追加
- `server/controllers/salesController.ts`にレポートデータ取得用のAPIエンドポイントを追加
- `server/services/salesService.ts`にレポートデータとランキングボードデータを取得するメソッドを追加
- `types/index.ts`にレポートデータとランキングボードデータの型を追加

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^6.19.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.7.0",
     "sweetalert2": "^11.26.17"
   },
   "devDependencies": {
