--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
-    "next": "16.0.7",
+    "next": "^16.1.6",
     "next-auth": "^4.24.13",
     "prisma": "^6.19.2",
     "react": "19.2.0",
