--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "@supabase/supabase-js": "^2.98.0",
     "bcryptjs": "^3.0.3",
     "exceljs": "^4.4.0",
     "next": "^16.1.6",
